--- a/Levantamento de Perdas/Src/Tela_acerto_levantamento.fx.yaml
+++ b/Levantamento de Perdas/Src/Tela_acerto_levantamento.fx.yaml
@@ -365,7 +365,7 @@
         X: =291
         ZIndex: =34
 
-    Prod_1 As label:
+    Quebras_00 As label:
         Align: =Align.Center
         Height: =23
         PaddingBottom: =2
@@ -373,9 +373,65 @@
         PaddingRight: =2
         PaddingTop: =2
         Size: =12
-        Text: =Sum(Filter(Listaproducao , (HORA_INICIO = Hora_00.Text) && (MAQUINA = Cbox_Maquina.Selected.Result) && (DATA = LabelDate.Text)),QUANTIDADE)
-        Width: =45
-        X: =188
+        Text: =Sum(Filter(Listaperdas , (HORA_INICIO = Hora_00.Text) && (MAQUINA = Cbox_Maquina.Selected.Result) && (DATA = LabelDate.Text) && (TIPO_DE_PERDA = "QUEBRAS")),QUANTIDADE)
+        Width: =48
+        X: =Prod_0.X + Prod_0.Width + 2
         Y: =Hora_00.Y
         ZIndex: =35
+
+    Troca_Ferramentas_00 As label:
+        Align: =Align.Center
+        Height: =23
+        PaddingBottom: =2
+        PaddingLeft: =2
+        PaddingRight: =2
+        PaddingTop: =2
+        Size: =12
+        Text: =Sum(Filter(Listaperdas , (HORA_INICIO = Hora_00.Text) && (MAQUINA = Cbox_Maquina.Selected.Result) && (DATA = LabelDate.Text) && (TIPO_DE_PERDA = "TROCA DE FERRAMENTA")),QUANTIDADE)
+        Width: =54
+        X: =Quebras_00.X + Quebras_00.Width + 2
+        Y: =Hora_00.Y
+        ZIndex: =36
+
+    MicroParada_00 As label:
+        Align: =Align.Center
+        Height: =23
+        PaddingBottom: =2
+        PaddingLeft: =2
+        PaddingRight: =2
+        PaddingTop: =2
+        Size: =12
+        Text: =Sum(Filter(Listaperdas , (HORA_INICIO = Hora_00.Text) && (MAQUINA = Cbox_Maquina.Selected.Result) && (DATA = LabelDate.Text) && (TIPO_DE_PERDA = "MICRO PARADA")),QUANTIDADE)
+        Width: =42
+        X: =Troca_Ferramentas_00.X + Troca_Ferramentas_00.Width + 2
+        Y: =Hora_00.Y
+        ZIndex: =37
+
+    Refugo_Retrabalho_00 As label:
+        Align: =Align.Center
+        Height: =23
+        PaddingBottom: =2
+        PaddingLeft: =2
+        PaddingRight: =2
+        PaddingTop: =2
+        Size: =12
+        Text: =Sum(Filter(Listaperdas , (HORA_INICIO = Hora_00.Text) && (MAQUINA = Cbox_Maquina.Selected.Result) && (DATA = LabelDate.Text) &&((TIPO_DE_PERDA = "REFUGO") || (TIPO_DE_PERDA = "RETRABALHO"))),QUANTIDADE)
+        Width: =52
+        X: =MicroParada_00.X + MicroParada_00.Width + 2
+        Y: =Hora_00.Y
+        ZIndex: =38
+
+    FaltaMaterial_00 As label:
+        Align: =Align.Center
+        Height: =23
+        PaddingBottom: =2
+        PaddingLeft: =2
+        PaddingRight: =2
+        PaddingTop: =2
+        Size: =12
+        Text: =Sum(Filter(Listaperdas , (HORA_INICIO = Hora_00.Text) && (MAQUINA = Cbox_Maquina.Selected.Result) && (DATA = LabelDate.Text) && ((TIPO_DE_PERDA = "FALTA DE MATERIAL DIRETO") )),QUANTIDADE)
+        Width: =41
+        X: =Refugo_Retrabalho_00.X + Refugo_Retrabalho_00.Width + 2
+        Y: =Hora_00.Y
+        ZIndex: =39
 
