--- a/Levantamento de Perdas/Src/Tela_acerto_levantamento.fx.yaml
+++ b/Levantamento de Perdas/Src/Tela_acerto_levantamento.fx.yaml
@@ -435,3 +435,45 @@
         Y: =Hora_00.Y
         ZIndex: =39
 
+    Ajustes_Regulagens_00 As label:
+        Align: =Align.Center
+        Height: =23
+        PaddingBottom: =2
+        PaddingLeft: =2
+        PaddingRight: =2
+        PaddingTop: =2
+        Size: =12
+        Text: =Sum(Filter(Listaperdas , (HORA_INICIO = Hora_00.Text) && (MAQUINA = Cbox_Maquina.Selected.Result) && (DATA = LabelDate.Text) && ((TIPO_DE_PERDA = "AJUSTES / REGULAGENS") )),QUANTIDADE)
+        Width: =53
+        X: =FaltaMaterial_00.X + FaltaMaterial_00.Width + 2
+        Y: =Hora_00.Y
+        ZIndex: =40
+
+    Troca_tipo_00 As label:
+        Align: =Align.Center
+        Height: =23
+        PaddingBottom: =2
+        PaddingLeft: =2
+        PaddingRight: =2
+        PaddingTop: =2
+        Size: =12
+        Text: =Sum(Filter(Listaperdas , (HORA_INICIO = Hora_00.Text) && (MAQUINA = Cbox_Maquina.Selected.Result) && (DATA = LabelDate.Text) && ((TIPO_DE_PERDA = "AJUSTES / REGULAGENS") )),QUANTIDADE)
+        Width: =47
+        X: =Ajustes_Regulagens_00.X + Ajustes_Regulagens_00.Width + 2
+        Y: =Hora_00.Y
+        ZIndex: =41
+
+    Velocidade_producao_00 As label:
+        Align: =Align.Center
+        Height: =23
+        PaddingBottom: =2
+        PaddingLeft: =2
+        PaddingRight: =2
+        PaddingTop: =2
+        Size: =12
+        Text: =Sum(Filter(Listaperdas , (HORA_INICIO = Hora_00.Text) && (MAQUINA = Cbox_Maquina.Selected.Result) && (DATA = LabelDate.Text) && ((TIPO_DE_PERDA = "AJUSTES / REGULAGENS") )),QUANTIDADE)
+        Width: =54
+        X: =Troca_tipo_00.X + Troca_tipo_00.Width + 2
+        Y: =Hora_00.Y
+        ZIndex: =42
+
