--- a/Levantamento de Perdas/Src/Tela_acerto_levantamento.fx.yaml
+++ b/Levantamento de Perdas/Src/Tela_acerto_levantamento.fx.yaml
@@ -483,92 +483,50 @@
         PaddingTop: =2
         Size: =12
         Text: =Sum(Filter(Listaperdas , (HORA_INICIO = Hora_00.Text) && (MAQUINA = Cbox_Maquina.Selected.Result) && (DATA = LabelDate.Text) && (TIPO_DE_PERDA = "TROCA DE FERRAMENTA")),QUANTIDADE)
-        Width: =47
+        Width: =46
         X: =Quebras_00.X + Quebras_00.Width
         Y: =Hora_00.Y
         ZIndex: =36
 
-    MicroParada_00 As label:
-        Align: =Align.Center
-        Height: =23
-        PaddingBottom: =2
-        PaddingLeft: =2
-        PaddingRight: =2
-        PaddingTop: =2
-        Size: =12
-        Text: =Sum(Filter(Listaperdas , (HORA_INICIO = Hora_00.Text) && (MAQUINA = Cbox_Maquina.Selected.Result) && (DATA = LabelDate.Text) && (TIPO_DE_PERDA = "MICRO PARADA")),QUANTIDADE)
-        Width: =42
-        X: =Troca_Ferramentas_00.X + Troca_Ferramentas_00.Width + 2
-        Y: =Hora_00.Y
-        ZIndex: =37
-
-    Refugo_Retrabalho_00 As label:
-        Align: =Align.Center
-        Height: =23
-        PaddingBottom: =2
-        PaddingLeft: =2
-        PaddingRight: =2
-        PaddingTop: =2
-        Size: =12
-        Text: =Sum(Filter(Listaperdas , (HORA_INICIO = Hora_00.Text) && (MAQUINA = Cbox_Maquina.Selected.Result) && (DATA = LabelDate.Text) &&((TIPO_DE_PERDA = "REFUGO") || (TIPO_DE_PERDA = "RETRABALHO"))),QUANTIDADE)
-        Width: =52
-        X: =MicroParada_00.X + MicroParada_00.Width + 2
-        Y: =Hora_00.Y
-        ZIndex: =38
-
-    FaltaMaterial_00 As label:
-        Align: =Align.Center
-        Height: =23
-        PaddingBottom: =2
-        PaddingLeft: =2
-        PaddingRight: =2
-        PaddingTop: =2
-        Size: =12
-        Text: =Sum(Filter(Listaperdas , (HORA_INICIO = Hora_00.Text) && (MAQUINA = Cbox_Maquina.Selected.Result) && (DATA = LabelDate.Text) && ((TIPO_DE_PERDA = "FALTA DE MATERIAL DIRETO") )),QUANTIDADE)
-        Width: =41
-        X: =Refugo_Retrabalho_00.X + Refugo_Retrabalho_00.Width + 2
-        Y: =Hora_00.Y
-        ZIndex: =39
-
     Ajustes_Regulagens_00 As label:
         Align: =Align.Center
-        Height: =23
+        Height: =Hora_00.Height
         PaddingBottom: =2
         PaddingLeft: =2
         PaddingRight: =2
         PaddingTop: =2
         Size: =12
         Text: =Sum(Filter(Listaperdas , (HORA_INICIO = Hora_00.Text) && (MAQUINA = Cbox_Maquina.Selected.Result) && (DATA = LabelDate.Text) && ((TIPO_DE_PERDA = "AJUSTES / REGULAGENS") )),QUANTIDADE)
-        Width: =53
-        X: =FaltaMaterial_00.X + FaltaMaterial_00.Width + 2
+        Width: =47
+        X: =Troca_Ferramentas_00.X + Troca_Ferramentas_00.Width
         Y: =Hora_00.Y
         ZIndex: =40
 
     Troca_tipo_00 As label:
         Align: =Align.Center
-        Height: =23
+        Height: =Hora_00.Height
         PaddingBottom: =2
         PaddingLeft: =2
         PaddingRight: =2
         PaddingTop: =2
         Size: =12
-        Text: =Sum(Filter(Listaperdas , (HORA_INICIO = Hora_00.Text) && (MAQUINA = Cbox_Maquina.Selected.Result) && (DATA = LabelDate.Text) && ((TIPO_DE_PERDA = "AJUSTES / REGULAGENS") )),QUANTIDADE)
-        Width: =47
-        X: =Ajustes_Regulagens_00.X + Ajustes_Regulagens_00.Width + 2
+        Text: =Sum(Filter(Listaperdas , (HORA_INICIO = Hora_00.Text) && (MAQUINA = Cbox_Maquina.Selected.Result) && (DATA = LabelDate.Text) && ((TIPO_DE_PERDA = "TROCA DE TIPO / SETUP") )),QUANTIDADE)
+        Width: =46
+        X: =Ajustes_Regulagens_00.X + Ajustes_Regulagens_00.Width
         Y: =Hora_00.Y
         ZIndex: =41
 
-    Velocidade_producao_00 As label:
+    Sist_Medicao_00 As label:
         Align: =Align.Center
-        Height: =23
+        Height: =Hora_00.Height
         PaddingBottom: =2
         PaddingLeft: =2
         PaddingRight: =2
         PaddingTop: =2
         Size: =12
-        Text: =Sum(Filter(Listaperdas , (HORA_INICIO = Hora_00.Text) && (MAQUINA = Cbox_Maquina.Selected.Result) && (DATA = LabelDate.Text) && ((TIPO_DE_PERDA = "AJUSTES / REGULAGENS") )),QUANTIDADE)
-        Width: =54
-        X: =Troca_tipo_00.X + Troca_tipo_00.Width + 2
+        Text: =Sum(Filter(Listaperdas , (HORA_INICIO = Hora_00.Text) && (MAQUINA = Cbox_Maquina.Selected.Result) && (DATA = LabelDate.Text) && ((TIPO_DE_PERDA = "SIST. DE MEDIÇÃO PERIFÉRICOS") )),QUANTIDADE)
+        Width: =47
+        X: =Troca_tipo_00.X + Troca_tipo_00.Width 
         Y: =Hora_00.Y
         ZIndex: =42
 
